# chaostreff-scheduler.old

./: .gitignore  .stylish-haskell.yaml  LICENSE  README.md  chaostreff-scheduler.cabal  chaostreff-scheduler.yaml  package.yaml  stack.yaml
app/: Args.hs  Main.hs
src/: CMSCalendar.hs  Reminder.hs  Scheduling.hs  Types.hs  Upcoming.hs  Utils.hs
test/: doctest.hs
