name:                chaostreff-scheduler
version:             0.1.0.0
description:         Please see README.md
homepage:            http://github.com/section77/chaostreff-scheduler
license:             MIT
license-file:        LICENSE
author:              j-keck
maintainer:          jhyphenkeck@gmail.com
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Scheduling, Types, Utils, CMSCalendar, Upcoming, Reminder
  other-modules:       
  build-depends:       HStringTemplate
                     , base
                     , bytestring
                     , exceptions
                     , lens
                     , smtp-mail
                     , text
                     , time
                     , transformers
                     , wreq
                     , xml
                     , yaml
                       -- connection + http-client + http-client-tls to disable tls validation
                     , connection
                     , http-client
                     , http-client-tls 
  default-language:    Haskell2010

executable chaostreff-scheduler
  hs-source-dirs:      app
  other-modules:       Args, Paths_chaostreff_scheduler
  main-is:             Main.hs
  ghc-options:         -W
  build-depends:       base
                     , chaostreff-scheduler
                     , transformers
                     , parsec
                     , yaml
  default-language:    Haskell2010

test-suite chaostreff-scheduler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , chaostreff-scheduler
                     , doctest
                     , HStringTemplate
  default-language:    Haskell2010

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             doctest.hs
  build-depends:       base
                     , chaostreff-scheduler
                     , doctest
                     , HStringTemplate
  default-language:    Haskell2010
                     
source-repository head
  type:     git
  location: https://github.com/section77/chaostreff-scheduler
